<?xml version="1.0"?>
<package>
  <name>orb2_slam_cuda_ros</name>
  <version>0.0.1</version>
  <description>
    ROSified CUDA ORB SLAM2 package
  </description>

  <license>GPLv3</license>

  <maintainer email="kelvin.ly1618@gmail.com">Kelvin Ly</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>orb2_slam_cuda</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>orb2_slam_cuda</run_depend>
  <run_depend>tf</run_depend>
</package>
